--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ streamlit_components/__pycache__/selectbox.cpython-313.pyc
 utils/__pycache__/__init__.cpython-313.pyc
 utils/__pycache__/data_loader.cpython-313.pyc
 utils/__pycache__/formatters.cpython-313.pyc
+utils/__pycache__/gcs_client.cpython-313.pyc
+test.py
+mf-analytics-f9e02-646e52aba226.json
+.streamlit/secrets.toml
